# shrew-python

./: ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
