[package]
name = "shrew-python"
publish = false
description = "Python bindings for Shrew deep learning library (PyO3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "shrew_python"
crate-type = ["cdylib"]

[dependencies]
shrew.workspace = true
shrew-core.workspace = true
shrew-cpu.workspace = true
shrew-nn.workspace = true
shrew-optim.workspace = true
shrew-data.workspace = true
pyo3.workspace = true
numpy.workspace = true
