[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "shrew_python"
version = "0.1.0"
description = "Python bindings for the Shrew deep learning library"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
